--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ scipy
 torch
 tqdm
 pillow
+opencv-python
 -e git+https://github.com/funkelab/funlib.learn.torch.git@master#egg=funlib.learn.torch
 -e git+https://github.com/funkelab/funlib.run.git@master#egg=funlib.run
 -e git+https://github.com/nilsec/pytorch-receptive-field.git@master#egg=torch-receptive-field
