Add baseline attributions and make layer lookup by name consistent

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ scipy
 torch
 tqdm
 pillow
+captum
 opencv-python
 -e git+https://github.com/funkelab/funlib.learn.torch.git@master#egg=funlib.learn.torch
 -e git+https://github.com/funkelab/funlib.run.git@master#egg=funlib.run
